--- a/css/style.css
+++ b/css/style.css
@@ -21,11 +21,9 @@ use the fonts in other ways in the font hierarchy etc. */
   --link-hover-color: #858988;
   --color-4: #FBB03B;
   --color-5: #B85CFF;
-
   --primary-font: "Julius Sans One", sans-serif;
   --secondary-font: "Mallanna", sans-serif;
   --main-text-color: #000;
-
   --white-space: 1rem;
 }
 
@@ -34,6 +32,9 @@ button {
 }
 a {
   transition: all 3s;
+  outline:none;
+  border-color: none;
+
 }
 button:hover {
   background-color: var(--link-hover-color);
@@ -181,15 +182,14 @@ ul li:last-child {
 
 button {
   padding: 1rem;
-  border-radius: 4px;
+  border-radius: 20px;
   background: var(--link-color);
   text-align: center;
   text-decoration: none;
   font: bold 1.25em/1 var(--primary-font);
   letter-spacing: 1px;
   color: white;
-  text-transform: uppercase;
-  text-shadow: 0px -1px 0px #0374a0;
+  text-shadow: 0px;
   transition: all 0.2s ease;
   cursor: pointer;
   margin: 0 1rem 1rem 0;
@@ -203,7 +203,7 @@ button:focus,
 button:active,
 button:focus-within {
   outline: 0;
-  border-radius: 4px;
+  border-radius: 20px;
 }
 
 .typography-main {
@@ -252,7 +252,8 @@ p[class*="font-details-"] {
 }
 
 .adjectives ul {
-  font-size: 1rem;
+  font: var(--secondary-font);
+  font-size: 1.3rem;
   opacity: 0.5;
 }
 
